compile for arm 8 cpus

--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -20,6 +20,9 @@ jobs:
       - name: Set Go Architecture
         run: export GOARCH=arm64
 
+      - name: Set Go CPU
+        run: export GOARM=8
+        
       - name: Set CGO Enabled
         run: export CGO_ENABLED=1
 
