--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -15,7 +15,7 @@ jobs:
           go-version: '1.20.1'
 
       - name: Build
-        run: env CGO_CFLAGS="-fembed-bitcode" GOOS=android GOARCH=arm64 go build -buildmode=c-shared   -trimpath  -o out/lib_token_studio_graph_engine.so -v ./...
+        run: CGO_CFLAGS="-fembed-bitcode" GOOS=android GOARCH=arm64 go build -buildmode=c-shared   -trimpath  -o out/lib_token_studio_graph_engine.so -v ./...
 
       - name: Upload build and header file
         uses: actions/upload-artifact@v3
