--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -14,10 +14,64 @@ jobs:
         with:
           go-version: '1.20.1'
 
-      - name: Build
-        run: CGO_CFLAGS="-fembed-bitcode" GOOS=android GOARCH=arm64 go build -buildmode=c-shared   -trimpath  -o out/lib_token_studio_graph_engine.so -v ./...
+      - name: Set OS
+        run: export GOOS=android
 
-      - name: Upload build and header file
+      - name: Set Go Architecture
+        run: export GOARCH=arm64
+
+      - name: Set CARCH
+        run: export CARCH=arm64
+
+      - name: Set Go CPU
+        run: export GOARM=8
+
+      - name: Set CGO Enabled
+        run: export CGO_ENABLED=1
+
+      - name: Set CGO CFLAGS
+        run: CGO_CFLAGS="-fembed-bitcode"
+
+      - name: Build arm64-v8a
+        run: go build -buildmode=c-shared   -trimpath  -o out/arm64-v8a/lib_token_studio_graph_engine.so -v ./...
+        env:
+          CGO_CFLAGS: -fembed-bitcode
+          GOOS: android
+          GOARCH: arm64
+          GOARM: 8
+          CGO_ENABLED: 1
+          CARCH: arm64
+
+      - name: Build armeabi-v7a
+        run: go build -buildmode=c-shared   -trimpath  -o out/armeabi-v7a/lib_token_studio_graph_engine.so -v ./...
+        env:
+          CGO_CFLAGS: -fembed-bitcode
+          GOOS: android
+          GOARCH: arm
+          GOARM: 7
+          CGO_ENABLED: 1
+          CARCH: arm
+
+      - name: Build x86
+        run: go build -buildmode=c-shared   -trimpath  -o out/x86/lib_token_studio_graph_engine.so -v ./...
+        env:
+          CGO_CFLAGS: -fembed-bitcode
+          GOOS: android
+          GOARCH: 386
+          CGO_ENABLED: 1
+          CARCH: 386
+
+      - name: Build x86_64
+        run: go build -buildmode=c-shared   -trimpath  -o out/x86_64/lib_token_studio_graph_engine.so -v ./...
+        env:
+          CGO_CFLAGS: -fembed-bitcode
+          GOOS: android
+          GOARCH: amd64
+          CGO_ENABLED: 1
+          CARCH: amd64
+
+
+      - name: Upload output
         uses: actions/upload-artifact@v3
         with:
           name: output
