--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -14,37 +14,37 @@ jobs:
         with:
           go-version: '1.20.1'
 
-      - name: Build arm64-v8a
+      - name: Build Android arm64-v8a
         run: go build -buildmode=c-shared   -trimpath  -o out/arm64-v8a/lib_token_studio_graph_engine.so -v ./...
         env:
-          CGO_CFLAGS: -fembed-bitcode
+          CGO_CFLAGS: "-fembed-bitcode"
           GOOS: android
           GOARCH: arm64
           CGO_ENABLED: 1
           CARCH: arm64
 
-      - name: Build armeabi-v7a
+      - name: Build Android armeabi-v7a
         run: go build -buildmode=c-shared   -trimpath  -o out/armeabi-v7a/lib_token_studio_graph_engine.so -v ./...
         env:
-          CGO_CFLAGS: -fembed-bitcode
+          CGO_CFLAGS: "-fembed-bitcode"
           GOOS: android
           GOARCH: arm
           CGO_ENABLED: 1
           CARCH: arm
 
-      - name: Build x86
+      - name: Build Android x86
         run: go build -buildmode=c-shared   -trimpath  -o out/x86/lib_token_studio_graph_engine.so -v ./...
         env:
-          CGO_CFLAGS: -fembed-bitcode
+          CGO_CFLAGS: "-fembed-bitcode"
           GOOS: android
           GOARCH: 386
           CGO_ENABLED: 1
           CARCH: 386
 
-      - name: Build x86_64
+      - name: Build Android x86_64
         run: go build -buildmode=c-shared   -trimpath  -o out/x86_64/lib_token_studio_graph_engine.so -v ./...
         env:
-          CGO_CFLAGS: -fembed-bitcode
+          CGO_CFLAGS: "-fembed-bitcode"
           GOOS: android
           GOARCH: amd64
           CGO_ENABLED: 1
