--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -4,7 +4,6 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -13,6 +12,9 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.20.1'
+
+      - name: Add Go Path
+        run: echo "::add-path::${{ github.workspace }}/go/bin"
 
       - uses: nttld/setup-ndk@v1
         id: setup-ndk
