--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Build AAR File with gomobile
         run: |
-          gomobile bind -target=android -o out/token_studio_graph_engine.aar -v ./.../graph
+          gomobile bind -target=android -v ./...
         env:
           GO111MODULE: auto
           CGO_ENABLED: 1
